SERVER-54608 dropIndexes needs to make the same assertions on primary and secondary nodes