src/mongo/db/catalog/drop_indexes.cpp
@@ -406,6 +406,9 @@ DropIndexesReply dropIndexes(OperationContext* opCtx,
     // Drop any ready indexes that were created while we yielded our locks while aborting using
     // similar index specs.
     if (!isWildcard && !abortedIndexBuilders.empty()) {
+        // The index catalog requires that no active index builders are running when dropping ready
+        // indexes.
+        IndexBuildsCoordinator::get(opCtx)->assertNoIndexBuildInProgForCollection(collectionUUID);
         writeConflictRetry(opCtx, "dropIndexes", dbAndUUID.toString(), [&] {
             WriteUnitOfWork wuow(opCtx);
 
@@ -441,12 +444,11 @@ DropIndexesReply dropIndexes(OperationContext* opCtx,
         invariant(indexNames.size() == 1);
         invariant(indexNames.front() == "*");
         invariant((*collection)->getIndexCatalog()->numIndexesInProgress(opCtx) == 0);
-    } else {
-        // The index catalog requires that no active index builders are running when dropping
-        // indexes.
-        IndexBuildsCoordinator::get(opCtx)->assertNoIndexBuildInProgForCollection(collectionUUID);
     }
 
+    // The index catalog requires that no active index builders are running when dropping ready
+    // indexes.
+    IndexBuildsCoordinator::get(opCtx)->assertNoIndexBuildInProgForCollection(collectionUUID);
     writeConflictRetry(
         opCtx, "dropIndexes", dbAndUUID.toString(), [opCtx, &collection, &indexNames, &reply] {
             WriteUnitOfWork wunit(opCtx);
